--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,7 +3,7 @@
 }
 
 .btn {
-  padding: 8px 20px;
+  padding: 20px 20px;
   border-radius: 2px;
   outline: none;
   border: none;
@@ -34,10 +34,24 @@
   font-size: 20px;
 }
 
+.btn--large1 {
+  padding: 12px 26px;
+  font-size: 20px;
+}
+
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
   background: #fff;
+  color: #242424;
+  transition: 250ms;
+}
+
+.btn--large1:hover {
+  transition: all 0.3s ease-out;
+  background: #f8a92a;
+  outline:none;
+  border:1px solid #eabbbb ;
   color: #242424;
   transition: 250ms;
 }
