--- a/src/App.css
+++ b/src/App.css
@@ -5,40 +5,24 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.home,
 .services,
-.products,
+.explore,
 .sign-up {
   display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-}
-
-.services {
-  background-image: url('/images/img-2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.products {
-  background-image: url('/images/img-1.jpg');
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
+  height: 50vh;
+  justify-content:center;
 }
 
 .sign-up {
-  background-image: url('/images/img-8.jpg');
+  line-height: 400px;
+  text-align: center;
+  background-image: url('/images/Sign-up.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 60px;
+  position: relative;
 }
+
+
