--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'PT Sans', sans-serif;
-}
 
 .services,
 .explore,
@@ -13,9 +7,47 @@
   justify-content:center;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.home,
+.services,
+.products,
+.sign-up {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.services {
+  background-image: url('/images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.explore {
+  background-image: url('/images/img-1.jpg');
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
 .sign-up {
   line-height: 400px;
   text-align: center;
+  height:30vh;
+
   background-image: url('/images/Sign-up.jpg');
   background-position: center;
   background-size: cover;
@@ -24,5 +56,3 @@
   font-size: 60px;
   position: relative;
 }
-
-
