--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 .services,
-.explore,
-.sign-up {
+.explore{
   display: flex;
   height: 50vh;
   justify-content:center;
@@ -17,8 +16,7 @@
 .home,
 .login,
 .services,
-.products,
-.sign-up{
+.products{
   display: flex;
   height: 90vh;
   align-items: center;
@@ -72,16 +70,12 @@
   font-size: 100px;
 }
 
-.sign-up {
-  line-height: 400px;
-  text-align: center;
-  height:30vh;
-
-  background-image: url('/images/Sign-up.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 60px;
-  position: relative;
+.resume-pdf {
+  padding-top: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
