--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 .services,
 .products{
   display: flex;
-  height: 90vh;
+  height: auto;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
