--- a/src/components/pages/Login.css
+++ b/src/components/pages/Login.css
@@ -14,14 +14,14 @@
 
 .avatar img {
   width: 20%;
-  margin-top: -270px;
+  margin-top: -400vh;
   height: auto;
   border-radius: 50%;
   border: 2px solid #333;
 }
 
 .info h1 {
-  margin-top: 0;
+  margin-top: 30px;
   font-size: 3rem;
   text-align: center;
 }
