--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -3,8 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 80vh;  
+}
+
+body {
   background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
 }
 
 .avatar {
@@ -14,21 +19,34 @@
 
 .avatar img {
   width: 20%;
-  margin-top: -400vh;
+  margin-top: 300px;
   height: auto;
   border-radius: 50%;
   border: 2px solid #333;
 }
 
-.info h1 {
-  margin-top: 30px;
-  font-size: 3rem;
-  text-align: center;
-}
 
-.info p {
+.info-container p {
   font-size: 1.5rem;
   line-height: 1.5;
   text-align: center;
-  max-width: 600px;
+  max-width:900px;
+  margin-bottom: 30px;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+}
+
+.typewriter-container {
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
