--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -34,3 +34,13 @@ video {
     font-size: 32px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+
+  .typewriter-container {
+    font-size: 80px;
+    color:rgba(255, 200, 62, 0.501);
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 200px;
+  }
