--- a/src/components/contactForm.css
+++ b/src/components/contactForm.css
@@ -6,20 +6,62 @@ form {
   }
   
   label {
-    margin-top: 10px;
+    margin-top: 17px;
+    display: block;
+    margin-bottom: -3px;
     font-size: 1.2rem;
     text-align: center;
   }
-  
+  input[type="email"]{
+    width: 350px;
+  }
+  input[type="text"]{
+    width: 250px;
+  }
+  textarea{
+    width: 500px;
+    height: 150px;
+    margin-bottom: 20px;
+  }
   input[type="text"],
   input[type="email"],
   textarea {
     margin-top: 10px;
-    padding: 0.5rem;
+    padding: 0.5rem ;
     border-radius: 5px;
     border: 2px solid #ccc;
-    width: 100%;
-    max-width: 500px;
+    max-width: 700px;
     font-size: 1.2rem;
+  }
+  
+  button {
+    background-color: #85ca88; /* Green */
+    display: fixed;
+    justify-content: center;
+    align-items: center;    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px; /* Add rounded corners to button */
+    transition-duration: 0.4s; /* Add transition effect to button */
+    width: 200px;
+    height: 50px;
+  }
+  
+  button:hover {
+    background-color: #dcb170; /* Dark green */
+    font-size: 20px;
+    font-variant: bold;
+    color: rgb(47, 47, 47);
+    width: 230px;
+    height: 55px;
+  }
+
+  .btn-primary {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
