--- a/src/App.css
+++ b/src/App.css
@@ -62,8 +62,8 @@
 }
 
 .resume-pdf {
-  padding-top: 50px;
-  position: absolute;
+  padding-top: 70px;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
