--- a/src/components/contactForm.css
+++ b/src/components/contactForm.css
@@ -34,8 +34,8 @@ form {
     font-size: 1.2rem;
   }
   
-  button {
-    background-color: #85ca88; /* Green */
+  .btn-send {
+    background-color: #6aa16c; /* Green */
     display: fixed;
     justify-content: center;
     align-items: center;    color: white;
@@ -50,16 +50,16 @@ form {
     height: 50px;
   }
   
-  button:hover {
+  .btn-send:hover {
     background-color: #dcb170; /* Dark green */
     font-size: 20px;
     font-variant: bold;
     color: rgb(47, 47, 47);
-    width: 230px;
-    height: 55px;
+    width: 220px;
+    height: 54px;
   }
 
-  .btn-primary {
+  .btn-send{
     display: flex;
     align-items: center;
     justify-content: center;
