--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -18,20 +18,20 @@ body {
 }
 
 .avatar img {
-  width: 20%;
-  margin-top: 300px;
+  width: 300px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   height: auto;
   border-radius: 50%;
   border: 2px solid #333;
 }
-
 
 .info-container p {
   font-size: 1.5rem;
   line-height: 1.5;
   text-align: center;
   max-width:900px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .info-container {
@@ -44,9 +44,10 @@ body {
 }
 
 .typewriter-container {
-  font-size: 48px;
+  font-size: 50px;
+  margin-left:-20px;
+  Color:rgb(22, 28, 85);
   font-weight: bold;
-  text-align: center;
   margin-bottom: 10px;
   margin-top: 20px;
 }
