--- a/src/components/contactForm.css
+++ b/src/components/contactForm.css
@@ -54,6 +54,7 @@ form {
     background-color: #dcb170; /* Dark green */
     font-size: 20px;
     font-variant: bold;
+    margin-bottom: -4px;
     color: rgb(47, 47, 47);
     width: 220px;
     height: 54px;
