--- a/src/components/pages/Hobbies.css
+++ b/src/components/pages/Hobbies.css
@@ -20,6 +20,16 @@
     height: 30%;
     margin-right: 2%;
     margin-left: 5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border: 2px solid black;
+    border-radius: 10px;
+    transition:0.3s
+  }
+  .hobby img:hover {
+    width: 35%;
+    height: 35%;
+    transition:0.3s
+
   }
   
   .hobby h2 {
