--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -16,6 +16,7 @@ video {
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
+    overflow: hidden;
   }
 
   .main-container > h1{
