--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #242424;
+    background-color: #1b1b28;
     padding: 3.5rem 0 1rem 0;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-  
     margin-bottom: 14px;
     padding: 24px;
     color: #fff;
@@ -22,7 +21,7 @@
   .footer-subscription > p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
-     width:auto;
+     width:auto
   }
   
   .footer-subscription-heading {
@@ -98,7 +97,7 @@
   /* Social Icons */
   .social-icon-link {
     color: #fff;
-    font-size: 50px;
+    font-size: 60px;
   }
   
   .social-media {
@@ -167,3 +166,108 @@
   
   @media screen and (max-width: 768px) {
   }
+
+/*-------------------Mobile-------------------*/
+.mobile-footer-container {
+  background-color: #1b1b28;
+  padding: 3.5rem 0 1rem 0;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-footer-subscription{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 14px;
+  padding: 24px;
+  color: #fff;
+}
+  
+.mobile-footer-subscription > p {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+   width:auto
+}
+.mobile-heading {
+  margin-top: -30px;
+  margin-bottom: 24px;
+  font-size: 34px;
+}
+
+.mobile-footer-ntoes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 0rem; 
+}
+
+.mobile-footer-subscription {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  margin-bottom: 14px;
+  padding: 24px;
+  color: #fff;
+}
+
+.mobile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.mobile-footer-links {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.mobile-social-media {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.mobile-footer-notes {
+  color: #fff;
+  font-size: 15px;
+  margin-left: -10px;
+  width: 140px;
+  text-align: center;
+}
+
+.mobile-media-wrap {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 90%;
+  margin-right: 20px;
+  max-width: 600px;
+}
+
+.mobiel-social-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: -10px;
+}
+
+.mobile-icon-link {
+  color: #fff;
+  font-size: 50px;
+  margin-left: 20px;
+}
