--- a/src/components/pages/Hobbies.css
+++ b/src/components/pages/Hobbies.css
@@ -51,7 +51,7 @@
 
   /*--------------MOBILE SECTION---------------------*/
 
-  .hobbies-container {
+  .mobile-hobbies-container {
     display: none;
   }
 
