--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -7,7 +7,6 @@ video {
   }
   
   .main-container {
-    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: 100vh;
     width: 100%;
     display: flex;
@@ -36,7 +35,7 @@ video {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
-  .typewriter-container2 {
+  .typewriter-container-web {
     font-size: 90px;
     color:rgba(255, 193, 35, 0.429);
     font-weight: bold;
@@ -45,7 +44,17 @@ video {
     margin-top: -120px;
     margin-bottom: 200px;
   }
-
+  
+  .typewriter-container-mobile {
+    font-size: 50px;
+    color:rgba(255, 193, 35, 0.429);
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: -20px;
+    margin-top: -120px;
+    margin-bottom: 200px;
+    width:auto;
+  }
   .main-btns{
     margin-top: -100px;
   }
