--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -22,6 +22,8 @@ body {
   margin-top: 50px;
   margin-bottom: 50px;
   height: auto;
+  margin-left: 15px;
+  align-items: center;
   border-radius: 50%;
   border: 2px solid #333;
 }
@@ -48,6 +50,7 @@ body {
   margin-left:-20px;
   Color:rgb(22, 28, 85);
   font-weight: bold;
+  margin-left: 5px;
   margin-bottom: 10px;
   margin-top: 20px;
 }
