--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -1,7 +1,7 @@
 video {
     object-fit:fill;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     z-index: -1;
   }
@@ -57,4 +57,18 @@ video {
   }
   .main-btns{
     margin-top: -100px;
+  }
+
+  /*----------------Mobile-------------*/
+  .main-mobile-container {
+    height:100vh;
+    overflow-y:auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
+    object-fit: contain;
+    overflow: hidden;
   }
