--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -63,6 +63,7 @@ video {
   .main-mobile-container {
     height:100vh;
     overflow-y:auto;
+    overflow-x:hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
