--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -74,8 +74,8 @@
     overflow: hidden;
   }
 
-  .mobileVideo {
-    object-fit:fill;
+  img {
+    object-fit:fixed;
     width: 100%;
     height: 100vh;
     position: fixed;
