--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -2,7 +2,7 @@
     object-fit:fill;
     width: 100%;
     height: 100vh;
-    position: fixed;
+    position: absolute;
     z-index: -1;
   }
   
@@ -61,9 +61,9 @@
 
   /*----------------Mobile-------------*/
   .main-mobile-container {
-    height:100vh;
-    overflow-y:auto;
-    overflow-x:hidden;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -72,12 +72,13 @@
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
     overflow: hidden;
+    background-position: center top;
   }
 
-  img {
-    object-fit:fixed;
+  .MobileBackground {
+    object-fit: fixed;
     width: 100%;
-    height: 100vh;
-    position: fixed;
+    height: 120%;
+    position: absolute;
     z-index: -1;
   }
