--- a/src/components/pages/Hobbies.css
+++ b/src/components/pages/Hobbies.css
@@ -2,6 +2,7 @@
     background-color: rgb(250, 239, 226);
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
   }
   
   .hobby {
