--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -4,12 +4,14 @@
   align-items: center;
   justify-content: center;
   height: 80vh;  
+  overflow-x: hidden;
 }
 
 body {
   background-color: rgb(250, 239, 226);
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .avatar {
