--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -193,7 +193,7 @@
 .mobile-footer-subscription > p {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
-   width:auto
+   width:auto;
 }
 .mobile-heading {
   margin-top: -30px;
