--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -44,17 +44,7 @@
     margin-top: -120px;
     margin-bottom: 200px;
   }
-  
-  .typewriter-container-mobile {
-    font-size: 50px;
-    color:rgba(255, 193, 35, 0.429);
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: -20px;
-    margin-top: -120px;
-    margin-bottom: 200px;
-    width:auto;
-  }
+
   .main-btns{
     margin-top: -100px;
   }
@@ -75,10 +65,37 @@
     background-position: center top;
   }
 
+  .typewriter-container-mobile {
+    font-size: 40px;
+    color:rgba(255, 193, 35, 0.429);
+    font-weight: bold;
+    text-align: center;
+    margin-top: -120px;
+    margin-bottom: 200px;
+    width:100%;
+  }
+
   .MobileBackground {
     object-fit: fixed;
     width: 100%;
     height: 120%;
     position: absolute;
     z-index: -1;
+  }
+
+  .main-mobile-container > h1{
+    color:rgba(198, 198, 198, 0.618);
+    font-size: 65px;
+    margin-top: -200px;
+    margin-bottom: 60px;
+    position: relative;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  }
+
+  .main-mobile-container > p{
+    margin-top: 8px;
+    color: white;
+    font-size: 32px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
