--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,7 +16,6 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  max-width: 1500px;
 }
 
 .navbar-logo {
@@ -42,6 +41,7 @@
   list-style: none;
   text-align: center;
   width: 60vw;
+  max-width: 100%;
   justify-content: end;
   margin-right: 2rem;
 }
