--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -4,10 +4,11 @@
 
 .btn {
   padding: 20px 20px;
-  border-radius: 2px;
   outline: none;
   border: none;
   cursor: pointer;
+  margin-bottom: 10%;
+  margin-top: 10%;
 }
 
 .btn--primary {
@@ -32,6 +33,7 @@
 .btn--large {
   padding: 12px 26px;
   font-size: 20px;
+  
 }
 
 .btn--large1 {
