--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -35,14 +35,24 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
-  .typewriter-container-web {
+  .welcome-web {
+    opacity: 0;
     font-size: 90px;
-    color:rgba(255, 193, 35, 0.429);
+    animation-name: fade-in;
+    color:rgba(255, 193, 35, 1);
+    animation-delay: 0.3s;
+    animation-duration: 4.5s;
+    animation-fill-mode: forwards;
     font-weight: bold;
     text-align: center;
     margin-bottom: -20px;
     margin-top: -120px;
     margin-bottom: 200px;
+  }
+  
+  @keyframes fade-in {
+    from { opacity: 0; }
+    to { opacity: 0.6; }
   }
 
   .main-btns{
@@ -51,7 +61,7 @@
 
   /*----------------Mobile-------------*/
   .main-mobile-container {
-    height: 100vh;
+    height: 90vh;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100%;
@@ -74,25 +84,29 @@
     margin-bottom: 200px;
     width:100%;
   }
+  .welcome-mobile {
+    opacity: 0;
+    font-size: 40px;
+    animation-name: fade-in;
+    color:rgb(1, 1, 4);
+    animation-delay: 0.8s;
+    animation-duration: 4.5s;
+    animation-fill-mode: forwards;
+    font-weight: bold;
+    text-align: center;
+    margin-top: -120px;
+    margin-bottom: 200px;
+    width:100%;
+  }
 
-  .MobileBackground {
+  .MobileVideo {
     object-fit: fixed;
     width: 100%;
     height: 120%;
     position: absolute;
     z-index: -1;
   }
-
-  .main-mobile-container > h1{
-    color:rgba(198, 198, 198, 0.618);
-    font-size: 65px;
-    margin-top: -200px;
-    margin-bottom: 60px;
-    position: relative;
-    text-align: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-  }
-
+  
   .main-mobile-container > p{
     margin-top: 8px;
     color: white;
