--- a/src/components/pages/Hobbies.css
+++ b/src/components/pages/Hobbies.css
@@ -1,55 +1,62 @@
 .hobbies-container {
-    background-color: rgb(236, 243, 253);
-    display: auto;
-    flex-direction: column;
-    overflow-x: hidden;
-  }
-  
-  .hobby {
-    display: auto;
-    flex-direction: row;
-    margin-bottom: 20px;
-    align-items: center;
-    text-align: center;
-  }
-  
-  
-  .hobby img {
-    margin-top: 5%;
-    min-width: 200px;
-    width: 30%;
-    height: 30%;
-    margin-right: 2%;
-    margin-left: 5%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border: 2px solid black;
-    border-radius: 10px;
-    transition:0.3s
-  }
-  .hobby img:hover {
-    width: 35%;
-    height: 35%;
-    transition:0.3s
+  background-color: rgb(236, 243, 253);
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
 
-  }
-  
-  .hobby h2 {
-    font-size: 34px;
-    margin-left: 3%;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-    font-style:initial;
-    color:rgb(82, 49, 8);
-    text-align: center;
-  }
-  
-  .hobby p {
-    margin-top: 5px;
-    font:17px;
-    max-width:50%;
-    margin-left: 25%;
-    transition:1.5s;
-    text-align: center;
-  }
+.hobby {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.hobby img {
+  margin-top: 5%;
+  width: 30%;
+  margin-right: 2%;
+  margin-left: 5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
+  border-radius: 10px;
+  transition: 0.3s;
+
+}
+
+.hobby img:hover {
+  width: 35%;
+  min-height: 200px;
+
+}
+
+.hobby h2 {
+  font-size: 34px;
+  margin-right: 3%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-style: initial;
+  color: rgb(82, 49, 8);
+  text-align: center;
+}
+
+.hobby p {
+  margin-top: 5px;
+  font-size: large;
+  width:70%;
+  margin-left: 15%;
+  transition: 1.5s;
+  text-align:justify;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: 4px outset rgb(144, 144, 144);
+  border-radius: 2px;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
 
 
   /*--------------MOBILE SECTION---------------------*/
@@ -64,9 +71,7 @@
   .mobile-hobby {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: 20px;
-    text-align: center;
   }
 
   .mobile-hobby img {
@@ -77,12 +82,22 @@
   .mobile-hobby p {
     margin-top: 5px;
     font:17px;
-    margin-left: 8%;
-    width:80%;
-    transition:1.5s
+    margin-left: 5%;
+    width:90%;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    transition:1.5s;
+    text-align:center;
+    border: 4px outset rgb(144, 144, 144);
+    border-radius: 2px;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    display: inline-block;
   }
 
   .mobile-hobby h2 {
+    text-align:center;
     font-size: 34px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     font-style:initial;
