--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -21,12 +21,15 @@
   border: 2px solid #333;
 }
 
-.info-container p {
+.info-container > p {
+  width: 80%;
+  max-width: 800px;
   font-size: 1.5rem;
   line-height: 1.5;
-  text-align: center;
+  text-align:inherit;
   max-width:900px;
   margin-bottom: 15px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .info-container {
