--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -72,7 +72,7 @@
 
   /*----------------Mobile-------------*/
   .main-mobile-container {
-    height: 90vh;
+    height: 150%;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100%;
@@ -95,13 +95,13 @@
     animation-fill-mode: forwards;
     font-weight: bold;
     text-align: center;
-    margin-top: -15%;
+    margin-top: 10%;
     margin-bottom: 50%;
     width:100%;
   }
 
   .MobileVideo {
-    object-fit: fixed;
+    object-fit: fill;
     width: 100%;
     height: 120%;
     position: absolute;
@@ -113,4 +113,7 @@
     color: white;
     font-size: 32px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .main-btns{
+    margin-bottom: 18%;
   }
