--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -72,18 +72,16 @@
 
   /*----------------Mobile-------------*/
   .main-mobile-container {
-    height: 150%;
+    height: auto;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
-    object-fit: contain;
-    overflow: hidden;
     background-position: center top;
+    position:relative;
   }
   .welcome-mobile {
     opacity: 0;
@@ -103,7 +101,7 @@
   .MobileVideo {
     object-fit: fill;
     width: 100%;
-    height: 120%;
+    height: 100%;
     position: absolute;
     z-index: -1;
   }
