--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -7,7 +7,7 @@
   }
   
   .main-container {
-    height: 100vh;
+    height: fit-content;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -16,23 +16,6 @@
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
     overflow: hidden;
-  }
-
-  .main-container > h1{
-    color:rgba(198, 198, 198, 0.618);
-    font-size: 65px;
-    margin-top: -200px;
-    margin-bottom: 60px;
-    position: relative;
-    text-align: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-  }
-
-  .main-container > p{
-    margin-top: 8px;
-    color: white;
-    font-size: 32px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   .welcome-web {
@@ -45,9 +28,8 @@
     animation-fill-mode: forwards;
     font-weight: bold;
     text-align: center;
-    margin-bottom: -20px;
-    margin-top: -120px;
-    margin-bottom: 200px;
+    margin-top: 5%;
+    margin-bottom: 14%;
   }
 
   @media (min-width: 768px) {
