--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -2,8 +2,8 @@
   background-color: rgb(236, 243, 253);
   display: auto;
   flex-direction: column;
-  overflow: hidden;
-  height: 100vh;
+  height: 120vh;
+  overflow-y: scroll;
 }
 
 .avatar {
