--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -121,9 +121,8 @@
   }
 
   .MobileVideo {
-    object-fit: fill;
+    object-fit: contain;
     width: 100%;
-    height: 100%;
     position: absolute;
     z-index: -1;
   }
