--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -21,15 +21,14 @@
     .welcome-web {
       opacity: 0;
       font-size: 90px;
+      padding-bottom: 50vh;
       animation-name: fade-in;
       color:rgba(255, 193, 35, 1);
       animation-delay: 0.3s;
       animation-duration: 4.5s;
       animation-fill-mode: forwards;
       font-weight: bold;
-      text-align: center;
-      margin-top: 5vh;
-      min-height: 10vh;
+      text-align: top;
       margin-bottom: 14vh;
     }
     /* Only apply this rule for screens wider than 768px */
