--- a/src/components/contactForm.css
+++ b/src/components/contactForm.css
@@ -42,14 +42,17 @@ form {
   }
   
   .btn-send {
-    background-color: #6aa16c; /* Green */
+    background-color: transparent; /* Green */
     display: fixed;
     justify-content: center;
-    align-items: center;    color: white;
+    align-items: center;
+    color: white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: bold;
+    border: 1px solid whitesmoke;
     cursor: pointer;
     border-radius: 8px; /* Add rounded corners to button */
     transition-duration: 0.4s; /* Add transition effect to button */
@@ -58,13 +61,9 @@ form {
   }
   
   .btn-send:hover {
-    background-color: #dcb170; /* Dark green */
-    font-size: 18px;
-    font-variant: bold;
-    margin-bottom: -4px;
-    color: rgb(47, 47, 47);
-    width: 215px;
-    height: 53px;
+    background-color: whitesmoke; /* Dark green */
+    color: black;
+
   }
 
   .btn-send{
