--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -18,9 +18,7 @@
   width: 300px;
   margin-top: 50px;
   height: auto;
-  border-radius: 30%;
-  border: 3px solid #333;
-
+  border-radius: 5px;
 }
 
 
