--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -33,8 +33,9 @@
     display: flex;
     flex: 1;
     width: auto;
-    margin: 0 1rem;
+    margin: auto 1rem;
     border-radius: 10px;
+    height: fit-content;
   }
   
   .cards__item__link {
@@ -52,7 +53,6 @@
   .cards__item__pic-wrap {
     position: relative;
     width: auto;
-    padding-top: 67%;
     overflow: hidden;
   }
   
@@ -76,11 +76,6 @@
   }
   
   .cards__item__img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: block;
     width: 100%;
     max-width: 100%;
