--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -67,6 +67,37 @@
   justify-content: center;
   height: 0;
   text-align: center;
+  margin-bottom: 50px;
+}
+h3{
+  margin-block: 30px;
+}
+
+#skills{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat( 12, minmax(250px, 1fr) );
+  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+  margin-inline: 50px;
+}
+.code, .other, .other1{
+  display: flex;
+  margin-bottom: 20px;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  padding-inline: 30px;
+  font-size: 40px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.other{
+  color: rgb(9, 87, 13);
+}
+.code{
+  color: rgb(132, 115, 9);
+}
+.other1{
+  color: rgb(9, 20, 69);
 }
 
 .typewriter-container {
