--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -93,7 +93,6 @@
   /*----------------Mobile-------------*/
   .main-mobile-container {
     height: auto;
-
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -104,16 +103,17 @@
   }
   .welcome-mobile {
     opacity: 0;
-    font-size: 40px;
+    font-size: 52px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     animation-name: fade-in;
     color:rgb(233, 234, 255);
     animation-delay: 0.5s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-    font-weight: bold;
+    font-weight:800;
     text-align: center;
-    margin-top: 10%;
-    margin-bottom: 50%;
+    margin-top: 28%;
+    margin-bottom: 40%;
     width:100%;
   }
 
