--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -78,18 +78,36 @@ h3{
   justify-content: center;
   grid-template-columns: repeat( 12, minmax(250px, 1fr) );
   grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
-  margin-inline: 50px;
+  margin-inline: 20px;
 }
+#skills-mobile{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat( 12, minmax(100px, 1fr) );
+  grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
+  margin-inline: 20px;
+  gap: 10px;
+}
+
+
 .code, .other, .other1{
   display: flex;
-  margin-bottom: 20px;
+  margin: auto;
   font-weight: 700;
   align-items: center;
   justify-content: center;
-  padding-inline: 30px;
-  font-size: 40px;
+  width: fit-content;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+#skills .code, #skills .other, #skills .other1{
+  font-size: 40px;
+}
+
+#skills-mobile .code, #skills-mobile .other, #skills-mobile .other1{
+  font-size: 22px;
+}
+
 .other{
   color: rgb(9, 87, 13);
 }
