--- a/src/components/pages/Intro.css
+++ b/src/components/pages/Intro.css
@@ -76,9 +76,20 @@ h3{
 #skills{
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat( 12, minmax(250px, 1fr) );
-  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
-  margin-inline: 20px;
+  max-width: 70%;
+  grid-template-columns: auto;
+  margin: auto;
+}
+#skills div{
+  display: grid;
+  justify-content: center;
+  width: 100%;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+  grid-template-rows: auto;
+}
+
+#skills div li{
+  margin: 10px;
 }
 #skills-mobile{
   display: grid;
@@ -89,6 +100,12 @@ h3{
   gap: 10px;
 }
 
+hr{
+  height: 50%;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: auto
+}
 
 .code, .other, .other1{
   display: flex;
