--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -1,28 +1,28 @@
 @keyframes fade-Me-in{
-    0%{opacity: 0%;}
-    30%{opacity: 0%;
+    0%{opacity: 0;}
+    30%{opacity: 0;
     padding-top: 0;}
-    100%{opacity: 100%;
+    100%{opacity: 1;
     padding-top: 30px;}
 }
 @keyframes tile1-anim{
-    0%{opacity: 0%;
+    0%{opacity: 0;
     left: 5vw;}
     20%{left: 5;}
     35%{
-        opacity: 0%;
+        opacity: 0;
     }
-    100%{opacity: 100%;
+    100%{opacity: 1;
         left: 0;}
 }
 @keyframes tile2-anim{
-    0%{opacity: 0%;
+    0%{opacity: 0;
     right: 5vw;}
     20%{right: 5vw;}
     35%{
-        opacity: 0%;
+        opacity: 0;
     }
-    100%{opacity: 100%;
+    100%{opacity: 1;
         right: 0;}
 }
 
