--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 .status{
   box-shadow: 0px 0px 3px black;
   height: 1vh;
+  border: 2px solid rgba(178, 209, 237, 0.669);
   display: flex;
   top: 0;
   width: 90vw;
@@ -57,6 +58,7 @@
 .status-gone{
   height: 1vh;
   display: block;
+  border: 2px solid rgba(178, 209, 237, 0.669);
   top: 0;
   width: 90vw;
   z-index: 2;
@@ -66,10 +68,11 @@
   margin-inline: 5vw;
   margin-top: 20px;
   background-color: transparent;
+  transition:0s;
 }
 
 .progress-bar {
-  height: 8px;
+  height: 100%;
   background: rgb(44, 60, 183);
   width: 0%;
   border-radius: 5px;
