--- a/src/App.css
+++ b/src/App.css
@@ -42,39 +42,29 @@
 .status{
   box-shadow: 0px 0px 3px black;
   height: 1vh;
-  border: 2px solid rgba(178, 209, 237, 0.669);
   display: flex;
+  padding-inline: 1vw;
   top: 0;
-  width: 90vw;
+  width: 100vw;
   z-index: 2;
   position: fixed;
-  border-radius: 5px;
-  margin-inline: 5vw;
-  margin-top: 6px;
   background-color: rgba(178, 209, 237, 0.669);
   transition: 1s;
 }
 
 .status-gone{
+  display: flex;
   height: 1vh;
-  display: block;
-  border: 2px solid rgba(178, 209, 237, 0.669);
   top: 0;
-  width: 90vw;
-  z-index: 2;
-  position: fixed;
-  border-radius: 5px;
-  grid-template-columns: auto auto auto auto;
-  margin-inline: 5vw;
-  margin-top: 20px;
-  background-color: transparent;
-  transition:0s;
+  width: 100vw;
+  padding-inline: 2vw;
+  transition:1s;
 }
 
 .progress-bar {
   height: 100%;
+  display: flex;
+  border-radius: 2px;
   background: rgb(44, 60, 183);
-  width: 0%;
-  border-radius: 5px;
   transition: 700ms;
 }
