--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -3,9 +3,21 @@
     overflow-x: hidden;
   }
   
-  h1 {
+.cards h1 {
     text-align: center;
+    width: 100vw;
     margin-top: 50px;
+    justify-content: center;
+    display: flex;
+
+    & .bar2{
+      height: 2px;
+      border-radius: 2px;
+      background-color: black;
+      padding-inline: 2vw;
+      width: 22vw;
+      margin: auto;
+    }
   }
   h5 {
     text-align: center;
@@ -88,6 +100,7 @@
   
   .cards__item__info {
     padding: 20px 30px 30px;
+    background-color: rgb(230, 230, 230);
   }
   
   .cards__item__text {
