--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -1,9 +1,14 @@
 @keyframes fade-Me-in{
-    0%{opacity: 0;}
-    30%{opacity: 0;
-    padding-top: 0;}
-    100%{opacity: 1;
-    padding-top: 30px;}
+    from{opacity: 0;
+    }
+    to{opacity: 1;
+    }
+}
+@keyframes widen{
+    0%{width: 0%;
+    }
+    100%{width: 100%;
+    }
 }
 @keyframes tile1-anim{
     0%{opacity: 0;
@@ -28,12 +33,15 @@
 
 .ABMC{
     justify-content: center;
+    height: auto;
     display: flex;
     flex-direction: column;
     text-align: center;
     gap: 40px;
     overflow: hidden;
-    margin-bottom: 50px;
+    margin-bottom: auto;
+    padding-bottom: 25vh;
+    background-image: linear-gradient(#cbcbcb 70%, #1b1b2846 75%, #1b1b2863 80%, #1b1b2898 85%, #1b1b28ce 90%, #1b1b28 95%, #1b1b28 97%);
 }
 
 .ABMC h2 strong{
@@ -55,9 +63,14 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
 
+    background-color: rgb(223, 223, 223);
+    padding-block: 20px;
+    padding-inline: 5vw;
+    border-radius: 10px;
     font-size: 20px;
     font-weight: lighter;
     font-family: sans-serif;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
 
     color:rgba(0, 121, 162, 0.714);
 }
@@ -68,31 +81,53 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;  
 
+    background-color: rgb(223, 223, 223);
+    padding-block: 20px;
+    padding-inline: 5vw;
+    border-radius: 10px;
     font-weight: lighter;
     font-weight: 300;
     font-size: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
 
     color:rgba(0, 33, 94, 0.697);
 }
 
 .ABMC .Me-title{
+
     position: relative;
     animation-name: fade-Me-in;
     animation-duration: 2s;
+    animation-delay: 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     margin-inline: auto;
-    padding-inline: 30px;
-    padding-bottom: 10px;
-    border: 0px;
-    margin-top: -1px;
+    opacity: 0;
+    
 
     width: fit-content;
-    background-image: linear-gradient(#e2e5ed, #adb1ba);
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
 
-    color: white;
-    font-size: 45px;
+    font-size: 25px;
     font-family: sans-serif;
+
+    & h1{
+        color: rgb(53, 53, 53);
+        text-shadow: 0px 0px 22px rgba(255, 255, 255, 0.504);
+        padding-inline: 22vw;
+    }
+
+    & .bar{
+        height: 2px;
+        background-color: rgba(0, 0, 0, 0.545);
+        width: 0%;
+        border-radius: 5px;
+
+        animation-name: widen;
+        animation-duration: 500ms;
+        animation-delay: 1.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+    }
 }
