--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -1,15 +1,3 @@
-@keyframes fade-Me-in{
-    from{opacity: 0;
-    }
-    to{opacity: 1;
-    }
-}
-@keyframes widen{
-    0%{width: 0%;
-    }
-    100%{width: 100%;
-    }
-}
 @keyframes tile1-anim{
     0%{opacity: 0;
     left: 5vw;}
@@ -34,26 +22,26 @@
 .ABMC{
     justify-content: center;
     height: auto;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    text-align: center;
+}
+
+.ABMC .info-mat{
     display: flex;
     flex-direction: column;
-    text-align: center;
-    gap: 40px;
+    width: 50vw;    
     overflow: hidden;
-    margin-bottom: auto;
-    padding-bottom: 25vh;
-    background-image: linear-gradient(#cbcbcb 70%, #1b1b2846 75%, #1b1b2863 80%, #1b1b2898 85%, #1b1b28ce 90%, #1b1b28 95%, #1b1b28 97%);
-}
+    padding: auto;
+    justify-content: center;
+    gap:25px;
+    background: #e2e5ed;
 
-.ABMC h2 strong{
-    background-color: rgba(0, 121, 162, 0.714);
-    color: white;
-    padding: 5px;
-    border-radius: 5px;
-}
+    & div{
+        width:fit-content;
+        margin-inline: auto;
 
-.ABMC div, .ABMC h2{
-    width:fit-content;
-    margin: auto;
+    }
 }
 
 .ABMC #tile1{
@@ -62,12 +50,13 @@
     animation-duration: 2s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
+    transition: 500ms;
 
-    background-color: rgb(223, 223, 223);
+    background-color: rgb(233, 233, 233);
     padding-block: 20px;
     padding-inline: 5vw;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 1vw;
     font-weight: lighter;
     font-family: sans-serif;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
@@ -80,54 +69,40 @@
     animation-duration: 2s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;  
+    transition: 500ms;
 
-    background-color: rgb(223, 223, 223);
+    background-color: rgb(233, 233, 233);
     padding-block: 20px;
-    padding-inline: 5vw;
+    padding-inline: 2vw;
     border-radius: 10px;
     font-weight: lighter;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1vw;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
 
     color:rgba(0, 33, 94, 0.697);
 }
 
-.ABMC .Me-title{
+#tile1:hover, #tile2:hover{
+    background-color: black;
+    color: white;
+}
 
-    position: relative;
-    animation-name: fade-Me-in;
-    animation-duration: 2s;
-    animation-delay: 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    margin-inline: auto;
-    opacity: 0;
-    
+.title-box{
+    display: flex;
+    background-color: black;
+    height: 100%;
+    width: 50vw;
+    min-height: 35vh;
 
-    width: fit-content;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-
-    font-size: 25px;
-    font-family: sans-serif;
-
-    & h1{
-        color: rgb(53, 53, 53);
-        text-shadow: 0px 0px 22px rgba(255, 255, 255, 0.504);
-        padding-inline: 22vw;
-    }
-
-    & .bar{
-        height: 2px;
-        background-color: rgba(0, 0, 0, 0.545);
-        width: 0%;
-        border-radius: 5px;
-
-        animation-name: widen;
-        animation-duration: 500ms;
-        animation-delay: 1.5s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
+    & h2{
+        background-color: black;
+        padding-block: 20px;
+        color: white;
+        text-align: center;
+        justify-content: center;
+        margin: auto;
+        font-size: 6em;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
