--- a/src/components/pages/Projects.css
+++ b/src/components/pages/Projects.css
@@ -1,32 +1,39 @@
 #live-proj{
-    justify-content: center;
-    text-align: center;
-    height: fit-content;
-    background-image: linear-gradient(whitesmoke, 30%,#cbcbcb);
-    padding: 30px;
-    padding-block: 50px;
-    padding-bottom:10vh;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    width: 100vw;
+}
+
+.title-box{
+    display: flex;
+    background-color: black;
+    height: 100%;
+    width: 50vw;
+    min-height: 35vh;
 }
 
 #live-proj h2{
-    color: rgb(53, 53, 53);
-    text-shadow: 0px 0px 22px white;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.545);
-    padding-bottom: 3px;
-    padding-inline: 10vw;
-    margin-inline: auto;
-    width: fit-content;
-    font-size: 40px;
+    background-color: black;
+    padding-block: 20px;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    font-size: 6em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-bottom: 20px;
+}
+
+#live-proj .info-mat{
+    display: flex;
+    background: #e2e5ed;
 }
 
 .cards_container {
     display: flex;
     flex-flow: column;
     align-items: center;
-    width: 350px;
-    margin: 0 auto;
+    width: 30vw;
+    margin: auto;
   }
 
 .cards_container .cards__item__link{
