--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -26,16 +26,15 @@
     grid-template-columns: auto 1fr;
     text-align: center;
     background: #e2e5ed;
+    
 }
 
-.ABMC .info-mat{
+.ABMC .info-mat, .ABMC .mob-info-mat{
     display: flex;
     flex-direction: column;
     width: 50vw;    
-    overflow: hidden;
-    padding: auto;
-    justify-content: center;
     gap:25px;
+    padding-block: 50px;
 
     & div{
         width:fit-content;
@@ -44,7 +43,7 @@
     }
 }
 
-.ABMC #tile1{
+.info-mat #tile1{
     position: relative;
     animation-name: tile1-anim;
     animation-duration: 2s;
@@ -63,7 +62,7 @@
 
     color:rgba(0, 121, 162, 0.714);
 }
-.ABMC #tile2{
+.info-mat #tile2{
     position: relative;
     animation-name: tile2-anim;
     animation-duration: 2s;
@@ -83,6 +82,14 @@
     color:rgba(0, 33, 94, 0.697);
 }
 
+.mob-info-mat #tile1, .mob-info-mat #tile2{
+    background-color: whitesmoke;
+    border-radius: 20px;
+    padding: 5px;
+    margin-inline: 10px;
+    font-size: 3vw;
+}
+
 #tile1:hover, #tile2:hover{
     background-color: black;
     color: white;
@@ -97,13 +104,12 @@
     border-top-left-radius: 100px;
 
     & h2{
-        background-color: black;
         padding-block: 20px;
         color: white;
         text-align: center;
         justify-content: center;
         margin: auto;
-        font-size: 6em;
+        font-size: 5vw;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
