--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -47,10 +47,10 @@
         content: "";
         position: absolute;
         background-color: transparent;
-        bottom: -150px;
-        height: 150px;
+        bottom: -26%;
+        height: 26%;
         width: 20vw;
-        border-top-left-radius: 70% 50px;
+        border-top-left-radius: 70% 30%;
         box-shadow: 0 -50px 0 0 #e2e5ed;
      }
 }
@@ -138,7 +138,7 @@
         width: 300px;
         rotate: 90deg;
         right: -50px;
-        border-top-left-radius: 50% 100px;
+        border-top-left-radius: 50% 50%;
         box-shadow: 0 -100px 0 0 black;
      }
      &::after {
