--- a/src/components/pages/Projects.css
+++ b/src/components/pages/Projects.css
@@ -12,7 +12,7 @@
         height: 100%;
         width: 50vw;
         min-height: 40vh;
-        border-bottom-right-radius: 100px;
+        border-bottom-right-radius: 10vw;
     }
 
 
@@ -24,9 +24,9 @@
         
         background-color: transparent;
         bottom: -200px;
-        height: 200px;
+        height: 37%;
         width: 20vw;
-        border-top-left-radius: 50% 100px;
+        border-top-left-radius: 50% 25%;
         box-shadow: 0 -100px 0 0 black;
      }
     
