--- a/src/components/pages/Projects.css
+++ b/src/components/pages/Projects.css
@@ -23,7 +23,7 @@
         position: absolute;
         
         background-color: transparent;
-        bottom: -200px;
+        bottom: -37%;
         height: 37%;
         width: 20vw;
         border-top-left-radius: 50% 25%;
