--- a/src/components/pages/AboutMe3.css
+++ b/src/components/pages/AboutMe3.css
@@ -46,11 +46,12 @@
     & img{
         margin: auto;
         width: 21vw;
+        max-width: 400px;
         object-fit: contain;
         transition: 300ms;
     }
     & img:hover{
-        width: 22vw;
+        scale: 1.07;
     }
 
     & a{
