--- a/src/components/ProjectsPage/PopUp.css
+++ b/src/components/ProjectsPage/PopUp.css
@@ -4,12 +4,13 @@
     width: 100%;
     max-width: 100%;
     height: 100%;
+    overflow-y: scroll;
 
     & .image{
         max-height: 390px;
+        min-height: 200px;
         z-index: 0;
         display: flex;
-        overflow-y: scroll;
         justify-content: center;
         align-items: center;
         position: relative;
@@ -50,7 +51,8 @@
         width: 95%;
         text-align: center;
         align-items: center;
-        
+        overflow-y: scroll;
+
         & h3{
             font-size: 30px;
             color: black;
