--- a/src/components/ProjectsPage/Projects.css
+++ b/src/components/ProjectsPage/Projects.css
@@ -14,7 +14,7 @@
 }
 
 #page{
-    min-height: 84vh;
+    min-height: 85vh;
     background-color: #e2e5ed;
     display: flex;
     flex-direction: column;
@@ -32,15 +32,13 @@
 
         & .info{
             width: 50%;
-            min-width: 400px;
+            min-width: 350px;
             max-width: 1000px;
-            height: 60%;
-            overflow: hidden;
-            margin-inline: auto;
+            height: 70%;
+            margin:auto;
             justify-content: center;
             align-items: center;
             border-radius: 10px;
-            top: 12%;
             display: flex;
             z-index: 1;
             position: relative;
