--- a/src/components/pages/AboutMe2.css
+++ b/src/components/pages/AboutMe2.css
@@ -23,13 +23,13 @@
     justify-content: center;
     height: auto;
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr auto ;
     text-align: center;
     background: #e2e5ed;
     
 }
 
-.ABMC .info-mat, .ABMC .mob-info-mat{
+.ABMC .info-mat{
     display: flex;
     flex-direction: column;
     position: relative;
@@ -96,6 +96,7 @@
 
 .mob-info-mat #tile1, .mob-info-mat #tile2{
     background-color: whitesmoke;
+    width: 60vw;
     border-radius: 20px;
     padding: 5px;
     margin-inline: 10px;
@@ -154,4 +155,39 @@
         border-top-right-radius: 40% 100px;
         box-shadow: 0 -100px 0 0 black;
      }
+}
+
+.ABMC .mob-info-mat{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    width: 100%;    
+    gap:25px;
+    padding-block: 50px;
+    border-radius: 50px;
+
+    & div{
+        width:fit-content;
+        margin-inline: auto;
+    }
+}
+
+.ABMC .mob-title-box1{
+    display: flex;
+    background-color: black;
+    position: relative;
+    height: 100%;
+    width: fit-content;
+    writing-mode: vertical-rl;
+    padding-left: 10px;
+
+    & h2{
+        margin: auto;
+        color: white;
+        left: 0px;
+        font-size: 40px;
+        font-family: 'Lucida Sans',
+         'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
 }
