--- a/src/components/pages/AboutMe3.css
+++ b/src/components/pages/AboutMe3.css
@@ -19,17 +19,16 @@
         right: 0;}
 }
 
-.ABMD{
+#sec-3{
     justify-content: center;
     height: auto;
     display: grid;
     grid-template-columns: auto 1fr;
     text-align: center;
     background: #e2e5ed;
-    
 }
 
-.ABMD .info-mat, .ABMD .mob-info-mat{
+#sec-3 .info-mat{
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -62,7 +61,7 @@
 }
 
 
-.ABMD .title-box1{
+#sec-3 .title-box1{
     display: flex;
     flex-direction: column;
     background-color: black;
@@ -83,31 +82,62 @@
     }
 }
 
-.ABMD .mob-title-box1{
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    height: fit-content;
-    width: 50vw;
-    min-height: 40vh;
-    border-top-right-radius: 100px;
-
-    & h2{
-        padding: 20px;
-        padding-inline: 30px;
-        color: white;
-        text-align: center;
-        justify-content: center;
-        margin: auto;
-        font-size: 4vw;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-}
-
 #square-top {
     border-bottom-left-radius:100px 10px;
     border:none;
     width: 50%;
     border-bottom: solid 1px #000;
     height:10px;
+ }
+
+ #mob-3{
+    justify-content: center;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr auto ;
+    background: #e2e5ed;
+
+    & .mob-title-box1{
+        display: flex;
+        flex-direction: column;
+        background-color: black;
+        height: fit-content;
+        width: fit-content;
+        min-height: 40vh;
+        writing-mode: vertical-rl;
+        padding-left: 10px;
+
+        & h2{
+            padding-inline: 80px;
+            color: white;
+            text-align: center;
+            justify-content: center;
+            margin: auto;
+            font-size: 40px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+    }
+
+    & .info-mat{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        gap:25px;
+        padding-block: 50px;
+        border-radius: 50px;
+    
+        & img{
+            margin: auto;
+            width: 30vw;
+            max-width: 400px;
+            object-fit: contain;
+            transition: 300ms;
+        }
+    
+        & a{
+            margin: auto;
+            object-fit: contain;
+        }
+    }
  }
