--- a/src/components/ProjectsPage/Projects.css
+++ b/src/components/ProjectsPage/Projects.css
@@ -14,7 +14,7 @@
 }
 
 #page{
-    min-height: 85vh;
+    min-height: calc(100vh - 160px);
     background-color: #e2e5ed;
     display: flex;
     flex-direction: column;
@@ -23,10 +23,11 @@
         position: fixed;
         display: flex;
         justify-content: center;
-        top: 0;
+        align-items: center;
+        top: 0px;
         left: 0;
         z-index: 2;
-        height: 100%;
+        height: 100vh;
         width: 100%;
         backdrop-filter: blur(6px);
 
@@ -34,19 +35,20 @@
             width: 50%;
             min-width: 350px;
             max-width: 1000px;
-            max-height: 1500px;
-            height: 60%;
+            max-height: 800px;
+            height: 70%;
+            margin-block: 120px;
             margin:auto;
             justify-content: center;
             align-items: center;
             border-radius: 10px;
-            display: flex;
-            z-index: 1;
             position: relative;
+            display: block;
+            z-index: 1;
             background-color: rgb(44, 44, 44);
             box-shadow: 0px 0px 30px 1px black;
             border: 5px solid  rgb(44, 44, 44);
-            scroll
+            overflow: hidden;
 
             & #close{
                 position: absolute;
