--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,12 @@
 #navbar {
   background-color: transparent;
-  background: linear-gradient(90deg, rgb(17, 26, 43) 0%, rgb(19, 13, 28) 100%);
+  position: fixed;
+  background-image: linear-gradient(black,20% ,rgba(0, 0, 0, 0.593),60%, rgba(0, 0, 0, 0.285),90%, rgba(0, 0, 0, 0));
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
   width:100%;
   z-index: 999;
 }
@@ -27,6 +27,7 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
+  text-shadow: 0px 0px 10px black;
 }
 
 .fa-typo3 {
